--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
     <title>Sign-Up Form</title>
     <link rel="stylesheet" href="/home/vboxuser/repos/Sign-up-form/style.css">
+    <link rel="stylesheet" href="/home/vboxuser/repos/Sign-up-form/forms.css">
 </head>
 <body>
     <div class="container">
@@ -22,7 +23,52 @@
 
         </div>
         <div class="right">
-            <h2>Hello</h2>
+            <div class="intro"> 
+                <p>This is not a real online service! You know you need something <br>like this in your life to help you realize your deepest dreams.<br>Sign up <i>now</i> to get started.
+                </p>
+                <p>You <i>know</i> you want to.</p>
+            </div>
+            <div class="form">
+                <form action="/submit" method="post">    
+                    <div class="firstLine">Let's do this!</div>
+                    <div class="first">
+                        <div class="one">
+                            <label for="first_name">FIRST NAME</label>
+                            <input type="text" id="first_name" name="first_name">
+                        </div>
+                        <div class="two">
+                            <label for="last_name">LAST NAME</label>
+                            <input type="text" id="last_name" name="last_name">
+                        </div>
+                    </div>
+                    <div class="second">
+                        <div    class="three">
+                            <label for="user_email">EMAIL</label>
+                            <input type="email" id="user_email" name="email">
+                        </div>
+                        <div class="four">    
+                            <label for="phone_number">PHONE NUMBER</label>
+                            <input type="tel" id="phone_number" name="phone_number" pattern="\d{10,}">
+                        </div>
+                    </div>
+                    <div class="third">
+                        <div class="five">
+                            <label for="password">PASSWORD</label>
+                            <input type="password" id="password" name="password" required>
+                        </div>    
+                        <div class="six">
+                            <label for="confirm_password">CONFIRM PASSWORD</label>
+                            <input type="password" id="confirm_password" name="confirm_password" required>
+                        </div>    
+                    </div>
+                </form>
+            </div>
+                <div class="btn">
+                    <button type="submit">Create Account</button>
+                </div>
+                <div class="lastLine"><pre>Already have an account? <a class="link">Log in</a></pre></div>
+
+
 
         </div>
     </div>
