--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                         <div class="five">
                             <label for="password">PASSWORD</label>
                             <input type="password" id="password" name="password" required>
+                            <span id="error"></span>
                         </div>    
                         <div class="six">
                             <label for="confirm_password">CONFIRM PASSWORD</label>
@@ -72,6 +73,7 @@
 
         </div>
     </div>
+    <script src="/home/vboxuser/repos/Sign-up-form/main.js"></script>
 </body>
-<script src="/home/vboxuser/repos/Sign-up-form/main.js"></script>
+
 </html>
