--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
     <title>Sign-Up Form</title>
-    <link rel="stylesheet" href="/home/vboxuser/repos/Sign-up-form/style.css">
-    <link rel="stylesheet" href="/home/vboxuser/repos/Sign-up-form/forms.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="forms.css">
 </head>
 <body>
     <div class="container">
         <div class="left">
             <div class="heading">
-                <img src="/home/vboxuser/repos/Sign-up-form/odin-lined.png" alt="odin lined image">
+                <img src="odin-lined.png" alt="odin lined image">
                 <h1>ODIN</h1>
             </div>
 
@@ -73,7 +73,7 @@
 
         </div>
     </div>
-    <script src="/home/vboxuser/repos/Sign-up-form/main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
